# QuantumBIT

./: CMakeLists.txt
include/ASG/: AsgData.h  Translator.h
include/core/gui/: Gui.h  MainGuiModule.h  MainWindow.h  SystemTrayIcon.h
include/core/gui/module_widget/: ModuleViewWidget.h  ModuleWindowWidget.h
include/core/logger/: logger.h
include/core/main/: QuantumBIT.h
include/core/module/: BaseModule.h  GuiModule.h  LogicModule.h  ModuleManager.h
include/core/qspdlog/: qspdlog.hpp
include/core/thread/: ThreadManager.h
include/module/hardware/ASG/: AsgData.h  Translator.h
include/qspdlog/: qabstract_spdlog_toolbar.hpp  qspdlog.hpp
qrc/: qt_icons.qrc  qt_logo.qrc  stylesheets.qrc
src/: main.cpp
src/ASG/: AsgData.cpp  Translator.cpp
src/core/gui/: Gui.cpp  MainGuiModule.cpp  MainWindow.cpp  SystemTrayIcon.cpp
src/core/gui/module_widget/: ModuleFrameWidget.cpp  ModuleFrameWidget.h  ModuleListItemDelegate.cpp  ModuleListItemDelegate.h  ModuleListModel.cpp  ModuleListModel.h  ModuleListView.cpp  ModuleListView.h  ModuleViewWidget.cpp  ModuleWindowWidget.cpp
src/core/logger/: logger.cpp
src/core/main/: QuantumBIT.cpp
src/core/module/: BaseModule.cpp  GuiModule.cpp  LogicModule.cpp  ModuleManager.cpp
src/core/qspdlog/: qabstract_spdlog_toolbar.cpp  qspdlog.cpp  qspdlog_model.cpp  qspdlog_model.hpp  qspdlog_proxy_model.cpp  qspdlog_style_dialog.cpp  qspdlog_toolbar.cpp  qspdlog_toolbar.hpp  qt_logger_sink.hpp
src/core/thread/: ThreadManager.cpp
src/qspdlog/: qabstract_spdlog_toolbar.cpp  qspdlog.cpp  qspdlog_model.cpp  qspdlog_model.hpp  qspdlog_proxy_model.hpp  qspdlog_style_dialog.hpp  qspdlog_toolbar.hpp  qt_logger_sink.hpp
